_sass/_layout.scss
/* IMPORT */

@import 'variables';
@import 'typography';
@import 'spacex';


/* INTRO */
/* Signature */

.path {
  stroke-dasharray: 1000;
  stroke-dashoffset: 1000;
  animation: dash 10s ease alternate infinite;
  stroke: #4A4A4A;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}

.signature {
  stroke-width: 1;
  z-index: -2;

  @media (max-width: $screen-mobile) {
    margin-top: 0;
    stroke-width: 3;
    display: none;
  }
}

.signature-mobile {
  stroke-width: 1;
  z-index: -2;
  display: none;

  @media (max-width: $screen-mobile) {
    display: block;
  }
}

/* First block */

.intro {
  width: 100%;
  height: 80vh;
  margin-top: -$space-x;
  position: absolute;
  left: 0;
  top: 0;
  z-index: -1;

  @media (max-width: $screen-mobile) {
    height: 100vh;
    // font-size: 20px;
    // line-height: 28px;
  }
}

.margin-intro-holder {
  margin-top: 80vh;

  @media (max-width: $screen-mobile) {
    margin-top: 100vh;
  }
}


/* Backgrounds */

.popup {
  background-color: #000;
  position: relative;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: -1;
}

.bg-black {
  background-color: black;
}

.bg-white {
  background-color: white;
}

.top-border-line {
  border-top: 1px solid $c-black20;
}

.top-border-line--light {
  border-top: 1px solid $c-white20;
}

/* MAIN WRAPPERS */
/* MENU */
/* Menu states */

.menu {
  display: flex;
  z-index: 1;

  @media (max-width: $screen-tablet){
    // flex-direction: column;
  }
}

#menu-on-scroll {
  position: fixed;
  width: 100%;
  top: 0;
  left: $space-x * 2;
  z-index: 999;

  @media (max-width: $screen-mobile) {
    left: $space-x / 2;
  }
}

.menu-is-hidden {
  transform: translate(0, -100px);
  opacity: 0;
}

/* Menu properties */

#menu-button {
  border-radius: 10px 10px 10px 2px;
  display: flex;
  position: relative;
}

#menu-button.size {
  width: 56px;
  height: 36px;
}

#menu-button.center {
  justify-content: center;
  align-items: center;
}

.button:hover {
  transform: translate(0px, -2px);
}

#menu-list {
  display: none;
}

/* Menu on click */

#menu-button.clicked {
  width: 412px;
  border-radius: 10px;
  padding-top: $space-x * 2;
  padding-bottom: $space-x * 2;

  @media (max-width: $screen-mobile) {
    width: calc(100% - 20px);
    padding-top: $space-x * 2;
    padding-bottom: $space-x;
  }
}

.menu-dot.clicked {
  position: absolute;
  width: 14px;
  height: 14px;
  top: 16px;
  left: 14px;

  @media (max-width: $screen-mobile) {
    left: 10px;
  }
}

#open-menu {
  width: 56px;
  height: 36px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  z-index: 1;
}

.menu-button-effect {
  transform: scale(.985);
  opacity: .7;

  @media (max-width: $screen-mobile) {
    transform: scale(.950);
  }
}

/* Menu dot animation */

.menu-dot {
  border-radius: 100px;
  margin-right: 4px;
  background-color: $c-white;
}

.menu-dot-size {
  width: 10px;
  height: 10px;
}

.menu-dot-size--big {
  width: 20px;
  height: 20px;
}

@keyframes blink {
  0%    {opacity: .2}
  20%   {opacity: .6}
  100%  {opacity: .2}
}

.text-dot {
  font-size: 1.6em;
  position: absolute;
  margin-left: .1em;
  margin-top: .06em;
}

.bubble-date .text-dot {
    font-size: 3em;
    margin-top: -0.04em;
    margin-left: .04em;

    @media (max-width: $screen-mobile) {
      margin-top: -0.06em;
    }
}

.menu-dot, .text-dot {
  animation-name: blink;
  animation-duration: 5s;
  animation-iteration-count: infinite;
  animation-fill-mode: both;
  cursor: pointer;
}

#menu-button .menu-dot:nth-child(2) {
  animation-delay: .2s;
}

#menu-button .menu-dot:nth-child(3) {
  animation-delay: .4s;
}

.page {
  width: 100%;
  max-width: 1800px;
  margin: 0 auto;
}

.after-project-list {
  height: 100vh;
}

.footer-button {
  cursor: pointer;
}

.footer-button .button-toggle {
  vertical-align: .1em;
}


/* COLUMN ATTRIBUTES */

.elem-in-viewport {
  transform: scale(.96);
  opacity: 0;
}

.row-to-column {
  display: flex;
  flex-direction: column;
}

.row-reverse {
  @media (max-width: $screen-tablet) {
    flex-direction: row-reverse;
  }
}

.col-reverse {
  @media (max-width: $screen-tablet) {
    flex-direction: column-reverse;
  }
}

.flex {
  display: flex;
}


/* COLUMN CONTAINERS */

.row-column {
  flex-direction: column;
}

.row-cell-6x {
  height: $space-x * 6;

  @media (max-width: $screen-tablet) {
    height: $space-x * 4;
  }

  @media (max-width: $screen-mobile) {
    height: $space-x * 4;
  }
}

.row-cell-4x {
  height: $space-x * 4;

  @media (max-width: $screen-tablet) {
    height: $space-x * 2;
  }

  @media (max-width: $screen-mobile) {
    height: $space-x / 2;
  }
}

.row-between {
  display: flex;
  justify-content: space-between;
}

.row-start {
  display: flex;
  justify-content: start;
}

.row-center {
  display: flex;
  justify-content: center;
}

.row-end {
  display: flex;
  justify-content: flex-end;
}

.row-clear-desktop {
  @media (max-width: $screen-desktop) {
    flex-direction: column;
  }
}

.row-clear-desktop-sm {
  @media (max-width: $screen-desktop-sm) {
    flex-direction: column;
  }
}

.row-clear-tablet {
  @media (max-width: $screen-tablet) {
    flex-direction: column;
  }
}

.row-clear-mobile {
  @media (max-width: $screen-mobile) {
    flex-direction: column;
  }
}

.row-bottom {
  align-items: flex-end;
}

.col-v-center {
  justify-content: center;
  display: flex;
  align-items: center;
}



/* COLUMN WIDTH */

.col-clear-mobile {
  @media (max-width: $screen-mobile) {
    width: 100%!important;
  }
}

.col-clear-tablet {
  @media (max-width: $screen-tablet) {
    width: 100%!important;
  }
}

.col-fit {
  max-width: 670px;
  width: fit-content;
}

.col-wide {
    margin-left: -$space-x * 2;
    margin-right: -$space-x * 2;

  @media (max-width: $screen-mobile) {
    margin-left: -$space-x / 2;
    margin-right: -$space-x / 2;
  }
}

.col-big {
  width: 100%;
}

.col-half {
  width: 50%;
  position: relative;

  @media (max-width: $screen-desktop-sm) {
     width: 100%;
    }
}

.col-16 {
  width: 1360px;

  @media (max-width: $screen-desktop-sm) {
      width: 100%;
    }
}

.col-12 {
  width: 1016px;

  @media (min-width: $screen-desktop-big) {
    width: 74.7%;
  }
}
.col-10 {
  width: 844px;

    @media (max-width: $screen-desktop-sm) {
      width: calc(100% - 40px);
    }

    @media (min-width: $screen-desktop-big) {
      width: 61.5%;
    }
}
.col-8  {
  width: 670px;

  @media (max-width: $screen-desktop-sm) {
    width: 100%;
    }

  @media (min-width: $screen-desktop-big) {
    width: 48.5%;
  }
}
.col-7  {
  width: 585px;

  @media (max-width: $screen-mobile) {
      width: 100%;
    }
}
.col-6  {
  width: 500px;

  @media (max-width: $screen-desktop-sm) {
      width: 100%;
    }

  @media (min-width: $screen-desktop-big) {
    width: 42.4%;
  }
}
.col-4 {
  width: 327px;

  @media (max-width: $screen-mobile) {
    width: 100%;
  }
}

.col-3 {
  width: 241px;
}

.col-2 {
  width: 155px;
}

.col-1 {
  width: 69px;
}


/* ELEMENT ATTRIBUTES */

.elem-is-hidden {display: none}
.elem-is-hidden--mobile {
  @media (max-width: $screen-mobile) {display: none}
}
.elem-opacity--1 {opacity: 1!important}
.elem-opacity--04 {opacity: .4}
.elem-opacity--0 {opacity: 0}

.elem-hover-opacity {opacity: 1}
.elem-hover-opacity:hover {opacity: 0}

.elem-deep-hover:hover {
  transform: scale(.995);
  opacity: .9;
}

.elem-fixed {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 1;
  width: 100vw;
  height: 100vh;
}

.elem-relative {
  position: relative;
}

.elem-relative--right {
  right: 0;
}

.elem-transition--10 {
  transition: all 1s ease;
}

.elem-transition--05 {
  transition: all .5s ease;
}

.elem-transition--02 {
  transition: all .2s ease;
}

.elem-index-minus {
  z-index: -1;
}

.elem-fade-in {
  animation: fadein .8s;
  @keyframes fadein {
    from { opacity: 0 }
    to { opacity: 1 }
  }
}

.elem-from-left {
  animation: fromleft .5s;
  @keyframes fromleft {
    from {
      opacity: 0;
      transform: translate(-20px, 0px);
    }
    to {
      opacity: 1;
      transform: translate(0, 0)
    }
  }
}

.project-hover {
  // transform: scale(1.01);
  opacity: .9;
}


/* BUBBLES AND TAGS */

.bubble {
  padding: $space-x;
  border-radius: 30px 30px 5px 30px;

  @media (max-width: $screen-mobile) {
    border-radius: 20px 20px 5px 20px;
    padding: $space-x;
  }
}

.bubble-left {
  border-radius: 30px 30px 30px 5px;

  @media (max-width: $screen-mobile) {
    border-radius: 20px 20px 20px 5px;
  }
}

.bubble-center {
  border-radius: 30px;

  @media (max-width: $screen-mobile) {
    border-radius: 20px;
  }
}

.bubble-small {
  border-radius: 10px;
  max-width: 60vw;
  border: 1px solid $c-black10;

  @media (max-width: $screen-mobile) {
  max-width: 80vw;
  padding: $space-x / 2;
  }
}

.elem-bottom-line {
  border-bottom: 1px solid $c-black20;
}

.bubble-date {
  position: absolute;
}

.bubble-grey {
  background-image: $c-gr-grey;
}

.bubble-black {
  background-image: $c-gr-black;
}

.bubble-blue {
  background-image: $c-gr-blue;
  color: $c-white;
}

.bubble-blue a {
  border-bottom: 1px solid $c-white20;
  color: $c-white;
}

.bubble-blue a:hover {
  border-bottom: 1px solid $c-white;
  color: $c-white;
}

.bubble-black98 {
background-image: $c-gr-black98;
}

.bubble-project {
  padding: $space-x;
  border-radius: 10px;
  /*background-image: linear-gradient(90deg, #1C1C1C 40%, rgba(0,0,0,0) 100%);*/
  background-color: #1C1C1C;
  transition: all .5s ease;
  margin-bottom: 2px;

  @media (max-width: $screen-mobile) {
    /*border-radius: 20px 20px 5px 20px;*/
    padding: $space-x / 2;
  }
}

/* Tags */

.tag {
  padding: 5px 10px;
  border-radius: 10px;
  border: 1px solid $c-black20;

  @media (max-width: $screen-mobile) {
    padding: 4px 6px;
    border-radius: 6px;
  }
}

.tag-white {
  border: 1px solid $c-white20;
}

.tag:hover {
  opacity: .6;
}

.tag a:hover {
  color: $c-black;
}

.tag-list {
  display: flex;
  flex-direction: start;
  flex-wrap: wrap;
}



/* PLACEHOLDER RATIO */

.ratio-wrap {
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 0;
  background: #F1F1F1;
}

.ratio-wrap iframe {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.ratio-wrap img {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.ratio-wrap video {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

.a-ratio-wrap {
  width: 100%;
}

/* Horizontal */
.ratio-169 {padding-top: 56.25%}
.ratio-54 {padding-top: 80%}
.ratio-53 {padding-top: 60%}
.ratio-43 {padding-top: 75%}
.ratio-32 {padding-top: 66.67%}
.ratio-75 {padding-top: 71.43%}
.ratio-11 {padding-top: 100%}

/* Vertical */
.ratio-916 {padding-top: 177.78%}
.ratio-45 {padding-top: 125%}
.ratio-35 {padding-top: 166.67%}
.ratio-34 {padding-top: 133.33%}
.ratio-23 {padding-top: 150%}
.ratio-57 {padding-top: 140%}

